Project ATM Jumat, 1 Maret 2019
project untuk mengerjakan task ATM Advanced Jumat, 1 Maret 2019

--- a/Anggita/ATM_exercise/nbproject/project.properties
+++ b/Anggita/ATM_exercise/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ATMApp
+main.class=atm_advanced.ATMApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
