--- a/Anggita/ATM_exercise/nbproject/project.properties
+++ b/Anggita/ATM_exercise/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=atm_advanced.ATMApp
+main.class=atm_exercise.ATMApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
