--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /Tugas/ATM_Advanced/build/
+/Tugas/ATM_Advanced/nbproject/private/
+/Anggita/ATM_exercise/build/
+/Anggita/ATM_exercise/nbproject/private/
