--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Tugas/ATM_Advanced/nbproject/private/
 /Anggita/ATM_exercise/build/
 /Anggita/ATM_exercise/nbproject/private/
+/ATM_MVC_Implemented/build/
+/ATM_MVC_Implemented/nbproject/private/
